Add endpoint to delete tmp images
